<resources>
    <string name="app_name" translatable="false">android-boilerplate-mvvm</string>
    <string name="app_name_uppercase" translatable="false">ANDROID-BOILERPLATE-MVVM</string>
    <string name="privacy_policy_link" translatable="false">https://www.google.com</string>
    <string name="email_address" translatable="false">test@test.com</string>
    <string name="image" translatable="false">-IMG-</string>
    <string name="video" translatable="false">-VID-</string>
    <string name="english" translatable="false">English</string>

    <string name="error_session_expired">Session expired</string>
    <string name="error_no_internet_connectivity">No internet connectivity</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_request_time_out">Request timeout</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="user_details">User Details</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="notification_text">Get detailed information about your device</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System default</string>
    <string name="language">Language</string>
    <string name="languages">Languages</string>
    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="share_message">Hey! Download %1$s to get detailed information about your device. https://play.google.com/store/apps/details?id=%2$s</string>
    <string name="rate_us">Rate us</string>
    <string name="more_apps">More Apps</string>
    <string name="version">Version</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="how_we_can_improve">How we can improve ?</string>
    <string name="improve_design">Improving Design</string>
    <string name="improve_experience">Improving Experience</string>
    <string name="improve_functionality">Improving Functionality</string>
    <string name="improve_performance">Improving Performance</string>
    <string name="briefly_describe_feedback">Briefly describe feedback</string>
    <string name="detailed_feedback">Detailed feedback:</string>
    <string name="type_here_">Type here…</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="invalid_feedback">Invalid Feedback!</string>
    <string name="no_email_app_installed">No email client apps installed</string>
    <string name="l_p_not_granted">Location permission not granted</string>
    <string name="back">Back</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="more_details">More Details</string>
    <string name="notifications">Notifications</string>
    <string name="n_p_title">Permission Required</string>
    <string name="n_p_message">App needs Notifications Permission to post notifications on this device.</string>
    <string name="n_p_not_granted">Notifications permission not granted</string>
    <string name="open_app_settings">Open App Settings</string>
    <string name="themes">Themes</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="next">Next</string>
    <string name="str_continue">Continue</string>
    <string name="great">Great!</string>
    <string name="you_are_all_set">You are all set and ready to use the app.</string>
    <string name="language_selection_done">Language selection is done</string>
    <string name="theme_selection_done">Theme selection is done</string>

</resources>